# vlak_plzen4_eu

./: .env.example  .gitignore  .gitmodules  README.md  debug_zip.py  doubravka_hlavak.html  doubravka_hlavak.sh  get_delays.py  get_direct_connection_cli.py  hlavak_doubravka.html  index.html  pyproject.toml  train_delays.py
czptt2gtfs/: README.md  __init__.py  __main__.py  config.gtfs-to-html.json  czptt2gtfs.py
czptt2gtfs/data/: agency.txt  dopravci.sh  dopravci.xml  druhy_vlaku.sh  komercni_druhy.sh  komercni_druhy.xml  sr70.csv  timetables.txt  typy.sh  typy.xml
data/merged_enriched_train_numbers/: calendar.txt  calendar_dates.txt  processing_summary.json  trips.txt
data/official_rail_work/official_gtfs/2026/: processing_summary.json  routes.txt  stops.txt
data/official_rail_work/xml_merged/2026/: PA_0054_KT------848A_00_2026.xml  PA_0054_KT------852A_00_2026.xml  PA_0054_KT------856A_00_2026.xml  PA_0054_KT------860A_00_2026.xml  PA_0054_KT------863A_00_2026.xml  PA_0054_KT------866A_00_2026.xml  PA_0054_KT------872A_00_2026.xml  PA_0054_KT------875A_00_2026.xml  PA_0054_KT------878A_00_2026.xml  PA_0054_KT------884A_00_2026.xml  PA_0054_KT------887A_00_2026.xml  PA_0054_KT------892A_00_2026.xml  PA_0054_KT------895A_00_2026.xml  PA_0054_KT------900A_00_2026.xml  (+13238 more)
docs/: train_delays_response.md
scripts/: download_and_convert_official_gtfs.py  enrich_merged_with_official_train_numbers.py
tests/: test_delay_matching.py  test_enrich_merged_with_official_train_numbers.py  test_get_delays.py
tests/fixtures/: zponline.html  zponlineos.html
